Correct spacing for join/share league buttons

--- a/musicleague/static/css/league_2.css
+++ b/musicleague/static/css/league_2.css
@@ -10,35 +10,37 @@
     line-height: 19px;
     margin: 10px 0 20px 0;
 }
-#title-bar #join-league-btn,
+#title-bar .join-league-btn,
 #title-bar .share-league-btn {
     background: none;
     border: 2px solid #ffffff;
     border-radius: 8px;
-    display: inline-block;
+    display: inline-table;
     height: 40px;
     outline: none;
     padding: 0;
     vertical-align: middle;
 }
-#title-bar #join-league-btn .text,
+#title-bar .join-league-btn .text,
 #title-bar .share-league-btn .text {
     color: #ffffff;
-    display: inline-block;
+    display: table-cell;
     font-family: 'Cubano', sans-serif;
     font-size: 18px;
     margin: 0;
+    padding: 0 0;
     text-decoration: none;
     vertical-align: middle;
 }
-#title-bar #join-league-btn .gold-star,
+#title-bar .join-league-btn .gold-star,
 #title-bar .share-league-btn .gold-star {
-    background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/star_gold.svg") no-repeat center;
-    display: inline-block;
-    height: 18px;
-    margin: 0 20px;
+    padding: 0 20px;
+    display: table-cell;
     vertical-align: middle;
-    width: 18px;
+}
+#title-bar .join-league-btn .gold-star img,
+#title-bar .share-league-btn .gold-star img {
+    vertical-align: middle;
 }
 #title-bar .leaderboard-label {
     color: #fff;
@@ -268,20 +270,24 @@
     margin-top: 25px;
     overflow: hidden;
     padding: 0px;
+}
+
+.popover.full-width.bottom {
     width: 100%;
 }
 
-.popover > .arrow { display: none;}
 .popover > .popover-content {
     background: none;
     padding: 0px;
 }
 
-#members-popover {
+#members-popover,
+#copied-popover {
     background-color: rgba(0, 37, 154, .85);
     color: #fff;
     padding: 25px 25px;
 }
+#copied-popover { text-transform: uppercase; padding: 10px 25px; }
 #members-popover .member {
     display: inline-block;
     margin: 10px 0px;
